- Fixed a bug in varargs handling for 64 bit values in bytecode
- Fixed output of C boolean operators in bytecode
- Fixed some problems with 32 to 64 bit casts in ASM output
- Made ALIGNW and ALIGNL keywords Spin2 only (some older Spin1 programs used these)
- Fixed a bad check for immediate values in P1 rdlong/rdbyte/etc.
- Added REGISTER keyword to BASIC
- Support register variables in C and BASIC
- Renamed LMM pc to __pc to avoid conflict with user code

Version 5.9.16
- Added UNION classes to BASIC
- Fixed a number of problems with 64 bit variables in bytecode
- Fixed an initializer bug in unions

Version 5.9.15
- Added definitions for PR0-PR7 registers in Spin2
- Added ORGH/END inline assembly in Spin2 for non-optimized hub based inline asm.
- Added MUXQ optimization for P2 pinwrite.
- Fixed several missing 64 bit arithmetic operations.
- Fixed evaluation of unary `+`.
- Fixed incorrect optimization around FCACHE.
- Made first 16 LUT registers reserved for user code.
- Prevent REP loop optimization in ORG and volatile asm

Version 5.9.14
- Added check for limit in ORG and ORGH
- Added warning for incompatible types in comparisons
- Fixed an incorrect optimization across calls
- Fixed dpeek/dpoke definitions in BASIC, and added lpeek/lpoke
- Improved support for 64 bit integers
- Increased default heap size on P2 to 6000 bytes
- Removed some bad debug printfs from sdmm.cc

Version 5.9.13
- Added base 4 and base 8 literals to BASIC
- Added __builtin_movbyts() intrinsic
- Added varargs support to bytecode backends
- Added PEEK, POKE, DPEEK, DPOKE, and VARPTR to BASIC
- Allow looking up static member variables and labels
- Fixed incorrect varargs leaf function optimization
- Fixed precedence of '\' in Spin when used for catching
- Fixed missing downcast when 64 bit arguments are passed to 32 bit parameters
- Fixed operator precedence of long @addr[n] in Spin DAT sections
- Make C const arrays always go into DAT, to save space

Version 5.9.12