@@ -2277,8 +2277,12 @@ asm_operand:
    { $$ = NewAST(AST_EXPRLIST, $1, NULL); }
  | '#' asmexpr
    { $$ = NewAST(AST_EXPRLIST, NewAST(AST_IMMHOLDER, $2, NULL), NULL); }
+ | '=' asmexpr
+   { $$ = NewAST(AST_EXPRLIST, NewAST(AST_IMMHOLDER, $2, NULL), NULL); }
  | '#' '#' asmexpr
    { $$ = NewAST(AST_EXPRLIST, NewAST(AST_BIGIMMHOLDER, $3, NULL), NULL); }
+ | C_EQ_OP asmexpr
+   { $$ = NewAST(AST_EXPRLIST, NewAST(AST_BIGIMMHOLDER, $2, NULL), NULL); }
  | asmexpr '[' asmexpr ']'
    { $$ = NewAST(AST_EXPRLIST, NewAST(AST_ARRAYREF, $1, $3), NULL); }
 ;
@@ -2796,6 +2800,8 @@ optpasmrange
             { $$ = $2; }
       | '[' '#' '#' pasmexpr ']'
             { $$ = NewAST(AST_BIGIMMHOLDER, $4, NULL); }
+      | '[' C_EQ_OP pasmexpr ']'
+            { $$ = NewAST(AST_BIGIMMHOLDER, $3, NULL); }
       | /* nothing */
             { $$ = NULL; }
 ;
