@@ -7,6 +7,7 @@ Version 5.9.17
 - Made ALIGNW and ALIGNL keywords Spin2 only (some older Spin1 programs used these)
 - Fixed a bad check for immediate values in P1 rdlong/rdbyte/etc.
 - Added REGISTER keyword to BASIC
+- Added '=' as alternate immediate syntax for use in C macros.
 - Support register variables in C and BASIC
 - Renamed LMM pc to __pc to avoid conflict with user code
 
